feat: Add cache database options